# boostrap-bot

./: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
cmd/bot/: main.go
docs/: build-windows.md
internal/control/: control.go
internal/inference/: inference.go
internal/obs/: obs.go
ml/: .gitignore  pyproject.toml  requirements.txt
ml/boostrap_bot/: __init__.py  __main__.py  export_onnx.py
ml/boostrap_bot/env/: __init__.py  rocket_league_env.py  spaces.py
ml/scripts/: train.py
