[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boostrap-bot-ml"
version = "0.1.0"
description = "ML training and export for boostrap-bot (Rocket League)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "torch>=2.0.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["boostrap_bot*"]
